@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-02-08T01:04:43Z",
-  "count_outdated" : 515,
-  "uniques_outdated" : 342,
+  "timestamp" : "2025-02-18T01:06:57Z",
+  "count_outdated" : 517,
+  "uniques_outdated" : 344,
   "count" : 518,
   "uniques" : 345,
   "clones" : [
-    {
-      "timestamp": "2025-02-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2025-02-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-07T00:00:00Z",
       "count": 1,
