@@ -1,17 +1,7 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 1,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2025-02-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-02-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-07T00:00:00Z",
       "count": 1,
